WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131056
[iOS WebKit2] Partial repaint is broken
https://bugs.webkit.org/show_bug.cgi?id=131056
Summary
[iOS WebKit2] Partial repaint is broken
Tim Horton
Reported
2014-04-01 13:44:22 PDT
I added a .bounds() where it didn't belong, so we would optimize away the copy from back to front despite the repaint rects not actually covering the whole bounds, so when we go to paint we won't paint the whole surface.
Attachments
patch
(1.48 KB, patch)
2014-04-01 13:45 PDT
,
Tim Horton
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-01 13:45:39 PDT
Created
attachment 228314
[details]
patch
Tim Horton
Comment 2
2014-04-01 13:48:10 PDT
Thanks, dino!
http://trac.webkit.org/changeset/166607
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug