[iOS WebKit2] Partial repaint is broken https://bugs.webkit.org/show_bug.cgi?id=131056

Reviewed by Dean Jackson.

* Shared/mac/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::display):
We need to check if the repaint rects themselves cover the whole
layer's surface, not just their bounds. Otherwise, we'll optimize
out the back->front copy and end up not painting the whole layer.


Canonical link: https://commits.webkit.org/149111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166607 268f45cc-cd09-0410-ab3c-d52691b4dbfc